# polymarket-trading-bot-python

./: .env.example  PRD.md  README.md  deploy.sh  pyproject.toml
infra/: .gitignore  README.md
infra/ansible/: .gitignore  ansible.cfg
infra/ansible/group_vars/: all.yml.example
infra/ansible/inventory/: hosts.yml
infra/ansible/playbooks/: bot.yml  proxy.yml  site.yml
infra/ansible/roles/bot/handlers/: main.yml
infra/ansible/roles/bot/tasks/: main.yml
infra/ansible/roles/bot/templates/: Caddyfile.j2  env.j2  karb-bot.service.j2  karb-dashboard.service.j2
infra/ansible/roles/proxy/handlers/: main.yml
infra/ansible/roles/proxy/tasks/: main.yml
infra/ansible/roles/proxy/templates/: danted.conf.j2
infra/opentofu/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: approve_usdc.py  backfill_redeemed_positions.py  check_market_type.py  check_wallet.py  cleanup_and_sell.py  compare_orders.py  compare_sell_orders.py  compare_signatures.py  compare_signing.py  debug_order_body.py  exit_position.py  migrate_to_sqlite.py  sell_position.py  test_both_clients.py  test_geo_restrictions.py  test_mixed_clients.py  test_order.py  test_order_submission.py
src/rarb/: __init__.py  __main__.py  bot.py  cli.py  config.py
src/rarb/scanner/: __init__.py  crossplatform_scanner.py  market_scanner.py  realtime_scanner.py
tests/: __init__.py
